Readme and publish.yml

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "logseq-ac-keijiban",
+  "name": "Animal Crossing Keijiban",
   "version": "0.0.1",
   "author": "breadfruit_burial",
   "main": "./index.html",
